
Checking in Jeffrey Wilder's modification to asim-run

----------
spartha1    Date: Fri Mar 30 18:13:11 EDT 2007  CSN: CSN-asimcore-67
                  Fri Mar 30 22:13:11 UTC 2007


Directory lib/libasim/include/asim
 atomic.h                  Locally Modified           66 
 freelist.h                Locally Added               0 
 mm.h                      Locally Modified           66 
 syntax.h                  Locally Modified           66 

Updating with simcore changes (rev. 2283)

- Add freelist.h: a thread-safe but lock free implementation of free
lists using cmpxchg to manage the head.
- Use free lists in mm.h to replace the mutex around new/delete.
- Clean up cmpxchg macros and work around some compiler bugs.
- Fix inconsistent naming of INT128_AVAIL in syntax.h

----------
spartha1    Date: Fri Mar 30 18:16:18 EDT 2007  CSN: CSN-asimcore-68
                  Fri Mar 30 22:16:18 UTC 2007


Directory lib/libasim/include/asim
 mod_numbers.h             Locally Modified           67 

Updating with simcore changes (rev. 2284)

added ModNumberDyn as a non-templated version of ModNumber. This can be used
without knowing the constraints at compile time.

----------
spartha1    Date: Fri Mar 30 18:17:57 EDT 2007  CSN: CSN-asimcore-69
                  Fri Mar 30 22:17:57 UTC 2007


Directory libperl/Asim/lib/Asim/Package
 Template.pm               Locally Modified           68 

Updating with simcore changes (rev. 2285)

Minor fix to the new package command.

----------
spartha1    Date: Fri Mar 30 18:25:03 EDT 2007  CSN: CSN-asimcore-70
                  Fri Mar 30 22:25:03 UTC 2007


Directory tools/scripts
 rsync.pl                  Locally Added               0 

Directory lib/libasim/include/asim
 freelist.h                Locally Modified           69 
 mod_numbers_dyn.h         Locally Added               0 

Missed a file in rev. 68.

Updating with simcore changes (rev. 2286)

- basic rsync script; for private use currently.