@@ -62,3 +62,4 @@ CSN-asimcore-67
 CSN-asimcore-68
 CSN-asimcore-69
 CSN-asimcore-70
+CSN-asimcore-71
