@@ -1358,3 +1358,15 @@ Missed a file in rev. 68.
 Updating with simcore changes (rev. 2286)
 
 - basic rsync script; for private use currently.
+
+----------
+spartha1    Date: Fri Mar 30 18:27:44 EDT 2007  CSN: CSN-asimcore-71
+                  Fri Mar 30 22:27:44 UTC 2007
+
+
+Directory libperl/Asim/lib/Asim
+ Package.pm                Locally Modified           70 
+
+Updating with simcore changes (rev. 2287)
+
+Fixing the error in the new package command
